--- a/css/styles.css
+++ b/css/styles.css
@@ -11,15 +11,38 @@
   }
 
   div.content-wrapper {
+    /* background-color: #fef; */
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     width: 80%;
-    padding: 20px 40px 40px 40px;
+    padding: 20px;
     margin: 20px auto 10px auto;
     border-radius: 8px;
     box-shadow: 4px 4px 10px rgba(100, 100, 100, 0.5);
+  }
+
+  .selection-wrap {
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
+    justify-content: space-around;
+    align-items: top;
+    width: 100%;
+    /* border: 1px solid #0f0; */
+
+  }
+
+  .selection {
+    flex: 1 1 auto;
+    min-width: 90%;
+    margin: 0 auto 0 auto;
+    /* border: 1px solid #f0f; */
+  }
+
+  .button-row {
+    display: block;
   }
 
 }
@@ -40,7 +63,9 @@ p {
   font-size: 18px;
 }
 
-
+h1 {
+  text-align: center;
+}
 
 
 .container-fluid {
@@ -57,6 +82,7 @@ p {
 }
 
 .content-wrapper {
+  background-color: #fff;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -64,7 +90,7 @@ p {
   width: 100%;
   height: 100%;
   padding: 20px;
-  margin: 20px 0px 0px 0px;
+  margin: 20px 4px 4px 4px;
 }
 
 .content-wrapper h2 {
@@ -80,10 +106,6 @@ p {
   text-align: center;
 }
 
-.order {
-  margin-top: 20px;
-  font-size: 150%
-}
 
 .thankyou {
   font-family: cursive;
