--- a/css/styles.css
+++ b/css/styles.css
@@ -2,42 +2,50 @@
 @media only screen and (min-width: 600px) {
 
 
+
   .container-fluid {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     min-height: 100%;
   }
 
   div.content-wrapper {
     /* background-color: #fef; */
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-items: center;
+    align-items: center; */
     width: 80%;
+    height: auto;
     padding: 20px;
     margin: 20px auto 10px auto;
     border-radius: 8px;
     box-shadow: 4px 4px 10px rgba(100, 100, 100, 0.5);
   }
 
+  .container-fluid h1 {
+    font-size: 48px;
+  }
+
   .selection-wrap {
-    display: flex;
+    /* display: flex;
     flex-direction: row;
     flex-grow: 1;
     justify-content: space-around;
-    align-items: top;
-    width: 100%;
+    align-items: top; */
+    width: 80%;
+    margin: 0 auto 0 15%;
     /* border: 1px solid #0f0; */
-
+    height: auto;
   }
 
   .selection {
-    flex: 1 1 auto;
-    min-width: 90%;
-    margin: 0 auto 0 auto;
+    /* flex: 1 1 auto; */
+    min-width: 40%;
+    margin: 0 20px 20px 20px;
+    float: left;
     /* border: 1px solid #f0f; */
   }
 
@@ -45,15 +53,27 @@
     display: block;
   }
 
+  label {
+    position: relative;
+    top: 2px;
+  }
+
 }
 
 /* ******** MOBILE FIRST DEFAULT STYLES (*********) */
 
 
-
 body {
-  background-color: #efece6;
+  background-color: #BD2222;
+  background-image: url(../img/red-check-tablecloth-grad.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
 }
+
+/* body {
+  background-color: #efece6;
+} */
 
 label {
   font-weight: normal;
@@ -65,40 +85,54 @@ p {
 
 h1 {
   text-align: center;
+  font-family: cursive;
+  font-size: 36px;
+  padding: 0px 20px 10px 20px;
+  color: #fff;
+  text-shadow: 0 0 8px #BD2222;
+
 }
 
 
 .container-fluid {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
   min-height: 100%;
   padding: 0;
 }
 
-.container-fluid h1 {
-  padding: 10px 20px 10px 20px;
-}
 
 .content-wrapper {
   background-color: #fff;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  width: 100%;
+  align-items: center; */
+  width: 92%;
   height: 100%;
   padding: 20px;
-  margin: 20px 4px 4px 4px;
+  margin: 20px auto 4px auto;
+  text-align: center;
+  /* border: 1px solid #00f; */
+  border-radius: 6px;
+  box-shadow: 2px 2px 10px rgba(100, 100, 100, 0.5);
 }
 
 .content-wrapper h2 {
   margin-top: 0px;
 }
 
-.form-control {
-  height: auto;
+.selection-wrap {
+  /* display: flex;
+  flex-direction: row;
+  flex-grow: 1;
+  justify-content: space-around;
+  align-items: top; */
+  width: 100%;
+  /* border: 1px solid #0f0; */
+  text-align: left;
 }
 
 .thankyou, .order {
@@ -116,10 +150,10 @@ h1 {
 /*  ********* BUTTONS ********** */
 
  .button-row {
-   display: flex;
+   /* display: flex;
    flex-direction: column;
    justify-content: center;
-   align-items: center;
+   align-items: center; */
    margin-top: 20px;
  }
 
@@ -128,6 +162,8 @@ h1 {
    text-transform: uppercase;
    letter-spacing: .1em;
    min-width: 150px;
+   box-shadow: 1px 1px 2px rgba(100, 100, 100, 1.0);
+
  }
 
  /* ********** INPUT BORDER ON MOBILE ******** */
